--- a/build.gradle
+++ b/build.gradle
@@ -2,10 +2,13 @@ plugins {
     id 'org.jetbrains.kotlin.jvm' version '1.3.31'
     id "com.jfrog.bintray" version "1.8.4"
 }
+apply plugin: 'maven'
+apply plugin: 'maven-publish'
 
 group 'net.orekyuu'
 archivesBaseName = 'kt-mapper'
 version '0.0.2'
+def gitRepo = 'https://github.com/orekyuu/KtMapper.git'
 
 repositories {
     mavenCentral()
@@ -32,11 +35,25 @@ test {
 bintray {
     user = project.hasProperty('bintray_user') ? bintray_user : ''
     key = project.hasProperty('bintray_key') ? bintray_key : ''
-
+    publications = ['MyPublication']
     pkg {
         repo = 'KtMapper'
         name = project.group + '.' + archivesBaseName
         licenses = ['MIT']
-        vcsUrl = 'https://github.com/orekyuu/KtMapper.git'
+        vcsUrl = gitRepo
+        version {
+            name = project.version
+        }
+    }
+}
+
+publishing {
+    publications {
+        MyPublication(MavenPublication) {
+            from components.java
+            groupId project.group
+            artifactId archivesBaseName
+            version project.version
+        }
     }
 }
